[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/characterMovement.gd" type="Script" id=1]
[ext_resource path="res://sprites/leftleg.png" type="Texture" id=2]
[ext_resource path="res://sprites/rightleg.png" type="Texture" id=3]
[ext_resource path="res://sprites/standing.png" type="Texture" id=4]
[ext_resource path="res://sprites/upperbody.png" type="Texture" id=5]
[ext_resource path="res://sprites/beard.png" type="Texture" id=6]
[ext_resource path="res://scripts/Beard.gd" type="Script" id=7]
[ext_resource path="res://sound/whip.wav" type="AudioStream" id=8]
[ext_resource path="res://sound/punch.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/meow.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/splash.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walking",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "still",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[node name="Player" type="KinematicBody2D" index="0"]

editor/display_folded = true
position = Vector2( 460, 1080 )
rotation = -0.862941
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Lowerbody" type="AnimatedSprite" parent="." index="0"]

rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "walking"
frame = 1
playing = true
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Upperbody" type="Sprite" parent="." index="1"]

position = Vector2( -1.67023, -3.05176e-005 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 2 )

[node name="Beard" type="Sprite" parent="." index="3"]

position = Vector2( 39.3419, 103.27 )
rotation = -1.5708
scale = Vector2( 0.407535, 0.376114 )
texture = ExtResource( 6 )
centered = false
region_rect = Rect2( 0, 0, 60, 60 )
script = ExtResource( 7 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility" ]

[node name="GunTween" type="Tween" parent="Beard" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="WhipSound" type="AudioStreamPlayer2D" parent="Beard" index="1"]

position = Vector2( -59.9543, 38.2202 )
scale = Vector2( 2.45378, 2.65877 )
stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="PunchSound" type="AudioStreamPlayer2D" parent="Beard" index="2"]

position = Vector2( -59.9543, 38.2202 )
scale = Vector2( 2.45378, 2.65877 )
stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="FadeTween" type="Tween" parent="Beard" index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Meow" type="AudioStreamPlayer" parent="Beard" index="4"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Splash" type="AudioStreamPlayer" parent="Beard" index="5"]

stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Cam" type="Camera2D" parent="." index="4"]

position = Vector2( 77.7513, 13.9592 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Material" ]


